--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id 'java'
-    id 'io.qameta.allure' version '2.9.3'
 }
 
 group 'com.example'
@@ -10,36 +9,23 @@ repositories {
     mavenCentral()
 }
 
-ext {
-    allureVersion = '2.20.1'
-    junitVersion = '5.9.1'
-}
-
-sourceCompatibility = '18'
-targetCompatibility = '18'
-
-tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
-}
 
 dependencies {
     testImplementation('com.codeborne:selenide:7.0.1')
-    testImplementation("io.qameta.allure:allure-selenide:${allureVersion}")
+    testImplementation('org.junit.jupiter:junit-jupiter:5.10.0')
+    testImplementation('org.assertj:assertj-core:3.23.1')
     testImplementation('org.slf4j:slf4j-simple:2.0.6')
 
-    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+
+
+    testImplementation('com.codeborne:xls-test:1.4.3')
+    testImplementation('com.codeborne:pdf-test:1.5.0')
+    testImplementation('com.opencsv:opencsv:5.8')
+    testImplementation('com.fasterxml.jackson.core:jackson-databind:2.15.3')
+
+
 }
 
 test {
     useJUnitPlatform()
-}
-allure {
-    autoconfigure = true
-    version = "${allureVersion}"
-
-    useJUnit5 {
-        version = "${allureVersion}"
-    }
 }
