--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     testImplementation('com.codeborne:pdf-test:1.5.0')
     testImplementation('com.opencsv:opencsv:5.8')
     testImplementation('com.fasterxml.jackson.core:jackson-databind:2.15.3')
+    testImplementation('com.github.javafaker:javafaker:1.0.2')
 
 
 }
