--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     testImplementation(
 
             'com.codeborne:selenide:6.10.3',
+//            'com.codeborne:selenide:7.0.1',
             'io.qameta.allure:allure-selenide:2.19.0',
             'org.junit.jupiter:junit-jupiter:5.10.0',
             'org.assertj:assertj-core:3.23.1',
@@ -55,6 +56,12 @@ task simple_test(type: Test){
 task selenoin_test(type: Test){
     useJUnitPlatform {
         includeTags("Selenoin")
+    }
+}
+
+task jenkins_properties_test(type: Test){
+    useJUnitPlatform {
+        includeTags("JenkinsPropertiesTest")
     }
 }
 
