--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ repositories {
 
 dependencies {
     testImplementation(
+            'io.rest-assured:rest-assured:5.3.2',
             'com.codeborne:selenide:6.10.3',
             'io.qameta.allure:allure-selenide:2.19.0',
             'org.junit.jupiter:junit-jupiter:5.10.0',
