--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'io.qameta.allure' version '2.10.0'
+    id("io.freefair.lombok") version "8.4"
 }
 
 group 'com.example'
@@ -38,7 +39,13 @@ dependencies {
             'com.opencsv:opencsv:5.8',
             'com.fasterxml.jackson.core:jackson-databind:2.15.3',
             'com.github.javafaker:javafaker:1.0.2',
-            'org.aeonbits.owner:owner:1.0.12'
+            'org.aeonbits.owner:owner:1.0.12',
+
+            'org.assertj:assertj-core:3.24.2',
+            'io.qameta.allure:allure-rest-assured:2.25.0'
+
+
+
     )
 }
 
